# training-bot

./: .gitignore  .gitmodules  Dockerfile  README  README.md  TASKS.md  headlessssh.md  py_install_dependencies.py
.devcontainer/: Dockerfile  devcontainer.json
src/: Training_Bot.ino
src/Training_Bot/: Training_Bot.ino  motor_command_reader.py
src/apriltag_detection/: package.xml  setup.cfg  setup.py
src/apriltag_detection/apriltag_detection/: detector.py
src/apriltag_msgs/: CMakeLists.txt  package.xml
src/apriltag_msgs/msg/: AprilTagDetection.msg  AprilTagDetections.msg
src/bot_launch/: package.xml  setup.py
src/bot_launch/bot_launch/: bot.launch.py
src/launch/: package.xml  setup.py
src/launch/launch/: CMakeLists.txt  launch.py
src/motor_control/: CMakeLists.txt  package.xml
src/motor_control/src/: node.cpp
src/serial_comms/: setup.py
src/serial_comms/serial_comms/: serial_handler.py  serial_node.py  z_send_redundant?.py
src/serial_msgs/: CMakeLists.txt
src/serial_msgs/msg/: Feedback.msg  MotorCurrents.msg
src/startup/: bot-launch.xml
src/teleop/: CMakeLists.txt  package.xml  setup.py  teleop.cpp
src/teleop/src/: teleop.cpp
src/teleop/teleop/: motor_command_reader.py
src/turn_to_apriltag/: package.xml  setup.cfg  setup.py
src/turn_to_apriltag/turn_to_apriltag/: PID.py  turn_node.py
src/webcam/: package.xml  setup.py
src/webcam/webcam/: node.py
